notebooks_api/spawner/manifests/byoc/spark_nodeport_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: {service_name}
  namespace: {namespace}
spec:
  selector:
    app: {container_name}
  ports:
  - name: blockmanager
    port: {blockmanager_nodeport}
    protocol: TCP
    nodePort: {blockmanager_nodeport}
    targetPort: {blockmanager_nodeport}
  - name: driver
    port: {driver_nodeport}
    protocol: TCP
    nodePort: {driver_nodeport}
    targetPort: {driver_nodeport}
  type: {service_type}
