notebooks_api/spawner/manifests/byoc/ingress_alb.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: {container_name}
  namespace: {namespace}
  annotations:
    'kubernetes.io/ingress.class': {ingress_class}
    'alb.ingress.kubernetes.io/group.name': {alb_group_name}
    'alb.ingress.kubernetes.io/group.order': "{group_order}"
    'alb.ingress.kubernetes.io/inbound-cidrs': {alb_inbound_cidrs}
    'alb.ingress.kubernetes.io/listen-ports': '[{listen_ports}]'
    'alb.ingress.kubernetes.io/scheme': {alb_scheme}
    'alb.ingress.kubernetes.io/target-type': {alb_target_type}
  labels:
    'ingress_group': 'template'
spec:
 rules:
 - http:
     paths:
     - path: {ingress_url}*
       backend:
         service:
           name: {container_name}
           port:
             number: 80
